<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_navigation"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.silencefly96.module_hardware.MainFragment"
        android:label="@string/main_fragment"
        tools:layout="@layout/fragment_main">

        <action android:id="@+id/action_main_to_bluetooth"
            app:destination="@id/bluetoothFragment">
        </action>

        <action android:id="@+id/action_main_to_camera"
            app:destination="@id/cameraMainFragment">
        </action>

        <action android:id="@+id/action_main_to_usb"
            app:destination="@id/usbFragment">
        </action>
    </fragment>

    <fragment
        android:id="@+id/bluetoothFragment"
        android:name="com.silencefly96.module_hardware.bluetooth.BluetoothFragment"
        android:label="@string/bluetooth_fragment"
        tools:layout="@layout/fragment_bluetooth" >

        <action android:id="@+id/action_bluetooth_to_client"
            app:destination="@id/bluetoothClientFragment">
        </action>

        <action android:id="@+id/action_bluetooth_to_server"
            app:destination="@id/bluetoothServerFragment">
        </action>

    </fragment>

    <fragment
        android:id="@+id/bluetoothClientFragment"
        android:name="com.silencefly96.module_hardware.bluetooth.BluetoothClientFragment"
        android:label="@string/bluetooth_client_fragment"
        tools:layout="@layout/fragment_bluetooth_client" />

    <fragment
        android:id="@+id/bluetoothServerFragment"
        android:name="com.silencefly96.module_hardware.bluetooth.BluetoothServerFragment"
        android:label="@string/bluetooth_server_fragment"
        tools:layout="@layout/fragment_bluetooth_server" />

    <fragment
        android:id="@+id/cameraMainFragment"
        android:name="com.silencefly96.module_hardware.camera.CameraMainFragment"
        android:label="@string/camera_main_fragment"
        tools:layout="@layout/fragment_main" >

        <action android:id="@+id/action_main_to_take_photo"
            app:destination="@id/takePhotoFragment">
        </action>

        <action android:id="@+id/action_main_to_take_video"
            app:destination="@id/takeVideoFragment">
        </action>
    </fragment>

    <fragment
        android:id="@+id/takePhotoFragment"
        android:name="com.silencefly96.module_hardware.camera.photo.TakePhotoFragment"
        android:label="@string/take_photo_fragment"
        tools:layout="@layout/fragment_camera_take_photo" />

    <fragment
        android:id="@+id/takeVideoFragment"
        android:name="com.silencefly96.module_hardware.camera.video.TakeVideoFragment"
        android:label="@string/take_video_fragment"
        tools:layout="@layout/fragment_camera_take_video" />

    <fragment
        android:id="@+id/usbFragment"
        android:name="com.silencefly96.module_hardware.usb.UsbFragment"
        android:label="@string/usb_fragment"
        tools:layout="@layout/fragment_usb" />
</navigation>