<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <EditText
                    android:id="@+id/target"
                    android:hint="@string/input_target_name"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:gravity="center"
                    android:autofillHints=""
                    android:inputType=""
                    />


                <Button
                    android:id="@+id/set"
                    android:text="@string/set_target"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >


                <EditText
                    android:id="@+id/input"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:inputType=""
                    />

                <Button
                    android:id="@+id/send"
                    android:text="@string/send_message"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>


            <TextView
                android:id="@+id/receive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="start"
            android:background="@color/BackGround"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/state"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:text="@string/state_idle"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_height="wrap_content"
                    />

                <Button
                    android:id="@+id/scan"
                    android:text="@string/start_scan"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </androidx.drawerlayout.widget.DrawerLayout>

</LinearLayout>